# rnn-causal-discovery-for-bio

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/processed/: protein_expression_levels.csv  rnn_hidden_states_pooled.csv
notebooks/: casual_learning_4.ipynb  casual_learning_8.ipynb  casual_learning_utr.ipynb
src/: __init__.py  bio_constants.py  config.yaml  data_utils.py  main.py  model.py
tests/: test_model.py  test_utils.py
